# VMPilot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml  msvc.yml
assets/: OID_to_RealOp.drawio  opcode_to_OID.drawio  outline.graphiz
common/: CMakeLists.txt
common/include/: crypto.hpp  file_type_parser.hpp  instruction_t.hpp  opcode_enum.hpp  opcode_table.hpp  utilities.hpp
common/include/header/native/: elf.hpp  macho.hpp  pe.hpp
common/src/: crypto.cpp  file_type_parser.cpp  instruction_t.cpp  opcode_table.cpp  utilities.cpp
data/basic/: CMakeLists.txt  main.cpp  mock_VMPilot.cpp
runtime/: CMakeLists.txt  dump_optable.cpp  main.cpp
runtime/include/: decoder.hpp  instruction_t.hpp  opcode_enum.hpp  opcode_table.hpp
runtime/src/: decoder.cpp  instruction_t.cpp  opcode_table.cpp
sdk/: CMakeLists.txt  main.cpp
sdk/include/: BytecodeCompileRecipe.hpp  bytecode_compiler.hpp  script_recipe.hpp
sdk/include/bytecode_compiler/: bytecode_compiler.hpp  x86_64_compiler.hpp  x86_compiler.hpp
sdk/include/segmentator/: ArchEnum.hpp  ELFHandler.hpp  ELFSectionViewer.hpp  InsnSegmentator.hpp  MachOHandler.hpp  ModeEnum.hpp  NativeFunctionBase.hpp  NativeSymbolTable.hpp  PEHandler.hpp  Strategy.hpp  X86Handler.hpp  X86Segmentator.hpp  elf_seg.hpp  macho_seg.hpp  pe_seg.hpp  segmentator.hpp
sdk/src/: BytecodeCompileRecipe.cpp  CMakeLists.txt  bytecode_compiler.cpp  script_recipe.cpp
sdk/src/bytecode_compiler/: CMakeLists.txt  bytecode_compiler.cpp  x86_64_compiler.cpp  x86_compiler.cpp
sdk/src/segmentator/: CMakeLists.txt  ELFHandler.cpp  ELFSectionViewer.cpp  InsnSegmentator.cpp  MachOHandler.cpp  NativeFunctionBase.cpp  NativeSymbolTable.cpp  PEHandler.cpp  Strategy.cpp  X86Handler.cpp  X86Segmentator.cpp  elf_seg.cpp  macho_seg.cpp  pe_seg.cpp  segmentator.cpp
